[package]
name = "scheduler-benchmark"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "buyya"
harness = false

[[bench]]
name = "heft"
harness = false

[dependencies]
para-graph = "0.1.2"
roxmltree = "0.20.0"
petgraph = "0.6.5"
log = "0.4.22"
itertools = "0.12.1"
ordered-float = "4.2.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"
